# bitnames-tg-webapp

./: .gitignore  .gitmodules  Cargo.toml  package-lock.json  package.json  webpack.config.js
src/: bitnames_zmq.rs  context.rs  main.rs
src/tg_chatbot/: mod.rs
src/web_app/: mod.rs
web/: decrypt.js  index.js  sign-in.js
