[package]
name = "bitname-tg-webapp"
version = "0.1.0"
authors = ["Ash Manning <ash@layertwolabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.28.1", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
warp = {version = "0.3.5", features = ["tls"]}