[package]
name = "bitname-tg-webapp"
version = "0.1.0"
authors = ["Ash Manning <ash@layertwolabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-recursion = "1.0.4"
async_zmq = "0.3.3"
dotenv = "0.15.0"
futures = "0.3.28"
hex = "0.4.3"
reqwest = "0.11.18"
serde_json = "1.0.96"
teloxide = {version = "0.12.2", features = ["macros", "rustls"]}
tokio = {version = "1.28.1", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
url = "2.3.1"
warp = {version = "0.3.5", features = ["tls"]}